Overlay, cursor and whitespace fix

--- a/ui/css/buttons.scss
+++ b/ui/css/buttons.scss
@@ -1,3 +1,7 @@
+button {
+  cursor: none;
+}
+
 @mixin button {
   border: none;
   display: flex;
